10 events for Song

--- a/localization/english/missions/song_missions_l_english.yml
+++ b/localization/english/missions/song_missions_l_english.yml
@@ -60,21 +60,21 @@
 
 
  #Events 
- me_song_ws_1_title:0 "$song_missions_task_1$"
- me_song_ws_1_desc:0 ""
- me_song_ws_1.a:0 ""
+ me_song_ws_1_title: "$song_missions_task_1$"
+ me_song_ws_1_desc: "The bold [ROOT.GetCountry.GetRuler.GetName] has not only managed to seize the city of [GetProvince('(int32)8428').GetName], but has made it known that the armies of [ROOT.GetCountry.GetName] will not stop there but shall continue to go wherever the [ROOT.GetCountry.GetRulerTitle] sends them - an announcement that has raised the ire of [GetCountry('LUU').GetRuler.GetName].\n\n[GetCountry('LUU').GetRuler.GetFirstName] has already dispatched envoys for [ROOT.GetCountry.GetCapital.GetName], warning against any further attempts at adventurism. 'Be satisfied with what you stole, thief! Your greed might cause you to misstep.' [GetCountry('LUU').GetRuler.GetFirstName]'s messengers were openly contemptuous. 'I can assure you that many others wait for the moment you stumble...'"
+ me_song_ws_1.a: "They shall be waiting for a long time!"
 
- me_song_ws_2_title:0 "$song_missions_task_2$"
- me_song_ws_2_desc:0 ""
- me_song_ws_2.a:0 ""
+ me_song_ws_2_title: "$song_missions_task_2$"
+ me_song_ws_2_desc: "Although [GetCountry('CHU').GetRuler.GetName] of [GetCountry('CHU').GetName] has been attempting to reform internally, their efforts have not produced results as quickly as they would like, and their armies have collapsed on the battlefield time and time again, leading to the loss of their territories.\n\nNever one to miss such opportunities, [ROOT.GetCountry.GetRuler.GetName] has continuously brought victory to the people of [ROOT.GetCountry.GetName], who are beginning to think that a new day could be approaching."
+ me_song_ws_2.a: "Their moment of weakness is an open invitation"
 
- me_song_ws_3_title:0 "$song_missions_task_3$"
- me_song_ws_3_desc:0 ""
- me_song_ws_3.a:0 ""
+ me_song_ws_3_title: "$song_missions_task_3$"
+ me_song_ws_3_desc: "Taking advantage of [ROOT.GetCountry.GetRuler.GetHerHis] high legitimacy and the personal loyalties of those surrounding [ROOT.GetCountry.GetRuler.GetHerHim] was no easy task, and yet [ROOT.GetCountry.GetRuler.GetName] was able to navigate the problem with ease.\n\nThanks to the efforts of the [ROOT.GetCountry.GetRulerTitle], it appears that the inevitable problems of succession have been dealt with many years before it becomes a problem - a boon to those waiting to assume the throne."
+ me_song_ws_3.a: "I know not what tomorrow brings, but my mind is at ease today"
 
- me_song_ws_4_title:0 "$song_missions_task_4$"
- me_song_ws_4_desc:0 ""
- me_song_ws_4.a:0 ""
+ me_song_ws_4_title: "$song_missions_task_4$"
+ me_song_ws_4_desc: "[ROOT.GetCountry.GetRuler.GetName] has commanded that the treasuries be opened to artists, poets, dancers and musicians, which has unleashed a flood of creativity upon [ROOT.GetCountry.GetCapital.GetName] and has brought prestige to the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] - an unintended side effect of the effort to increase life at court, but not entirely unwelcome.\n\n[ROOT.GetCountry.GetRuler.GetFirstName], who is personally responsible for these changes impacting [ROOT.GetCountry.GetName], has been accused by some of being extravagant, but [ROOT.GetCountry.GetRuler.GetSheHe] has laughed off these criticisms."
+ me_song_ws_4.a: "Life without art is not worth living!"
  
  me_song_ws_400_title:0 ""
  me_song_ws_400_desc:0 ""
@@ -100,25 +100,25 @@
  me_song_ws_404.b:0 ""
  me_song_ws_404.c:0 ""
 
- me_song_ws_5_title:0 "$song_missions_task_5$"
- me_song_ws_5_desc:0 ""
- me_song_ws_5.a:0 ""
+ me_song_ws_5_title: "$song_missions_task_5$"
+ me_song_ws_5_desc: "Taking over [GetProvince('(int32)8533').GetName] has brought much glory and honor to the people of [ROOT.GetCountry.GetName], who have become known for the gentle treatment they have given to the conquered. The #E Tomb of Confucius#! has not been spoiled or ransacked by the invading armies, but treated with the utmost respect.\n\n[ROOT.GetCountry.GetRuler.GetName], who has long valued the wisdom of the great teacher, is hoping for a few weeks of respite so that [ROOT.GetCountry.GetRuler.GetSheHe] can visit Qufu on a pilgrimage."
+ me_song_ws_5.a: "I, too, desire to visit the grave of the great Confucius"
 
- me_song_ws_6_title:0 "$song_missions_task_6$"
- me_song_ws_6_desc:0 ""
- me_song_ws_6.a:0 ""
+ me_song_ws_6_title: "$song_missions_task_6$"
+ me_song_ws_6_desc: "[ROOT.GetCountry.GetRuler.GetName] has been unwilling to fight pitched battles with the levies of Z[ROOT.GetCountry.GetName], preferring instead to reserve our might for the moments that we truly need it.\n\nBut now that [ROOT.GetCountry.GetRuler.GetFirstName] has secured powerful foreign alliances, our strength is such that we can openly discuss with our new friends about how we shall divide up the lands we will conquer together.\n\nEveryone within [ROOT.GetCountry.GetCapital.GetName] knows that these are cynical alliances of temporary convenience, but they applaud the vision of our [ROOT.GetCountry.GetRulerTitle]."
+ me_song_ws_6.a: "I will do whatever it takes to benefit [ROOT.GetCountry.GetName]"
 
- me_song_ws_7_title:0 "$song_missions_task_7$"
- me_song_ws_7_desc:0 ""
- me_song_ws_7.a:0 ""
+ me_song_ws_7_title: "$song_missions_task_7$"
+ me_song_ws_7_desc: "Much to [ROOT.GetCountry.GetRuler.GetHerHis] credit, [ROOT.GetCountry.GetRuler.GetName] has finally restored the honor of the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] after many years of striving to become a worthy ruler. The people of [ROOT.GetCountry.GetName] have forgiven [ROOT.GetCountry.GetRuler.GetFirstName]'s ancestors for their erroneous ways, and no longer is the [ROOT.GetCountry.GetRulerTitle] compared to #E King Zhou of Shang#! by the peasants."
+ me_song_ws_7.a: "At last, I will be known by my own accomplishments"
 
  me_song_ws_8_title:0 "$song_missions_task_8$"
  me_song_ws_8_desc:0 ""
  me_song_ws_8.a:0 ""
 
- me_song_ws_9_title:0 "$song_missions_task_9$"
- me_song_ws_9_desc:0 ""
- me_song_ws_9.a:0 ""
+ me_song_ws_9_title: "$song_missions_task_9$"
+ me_song_ws_9_desc: "[ROOT.GetCountry.GetRuler.GetName] has long been respected as a good diplomat, but as of late, [ROOT.GetCountry.GetRuler.GetSheHe] is also hailed as a fearsome warrior, all thanks to the many victories that the levies of [ROOT.GetCountry.GetName] have won against the smaller cities to the east. They have been unable to resist our forces, and one by one, they succumb to the inevitable and open up their citadel gates for our men.\n\nThe wars were almost a formality - [ROOT.GetCountry.GetRuler.GetFirstName] never once believed the country to be in any real danger, but likened these conflicts to tidying up a spoiled playroom after the rampages of a small child - a simple mess that was easy to clean up."
+ me_song_ws_9.a: "On to bigger and better things..."
 
  me_song_ws_10_title:0 "$song_missions_task_10$"
  me_song_ws_10_desc:0 ""
@@ -143,22 +143,22 @@
  me_song_ws_14_desc:0 ""
  me_song_ws_14.a:0 ""
 
- me_song_ws_15_title:0 "$song_missions_task_15$"
- me_song_ws_15_desc:0 ""
- me_song_ws_15.a:0 ""
+ me_song_ws_15_title: "$song_missions_task_15$"
+ me_song_ws_15_desc: "Thanks to the efforts of [ROOT.GetCountry.GetRuler.GetName] to build farms throughout [ROOT.GetCountry.GetName], we not only have expanded trade in the region, but we have seen the population grow as well. [ROOT.GetCountry.GetCapital.GetName] swells with newly-arrived freemen and the sons of farmers looking for opportunities in the capital during the off-season."
+ me_song_ws_15.a: "An auspicious moment for Song! We shall put them to work"
 
- me_song_ws_16_title:0 "$song_missions_task_16$"
- me_song_ws_16_desc:0 ""
- me_song_ws_16.a:0 ""
+ me_song_ws_16_title: "$song_missions_task_16$"
+ me_song_ws_16_desc: "[ROOT.GetCountry.GetRuler.GetName] has funneled the efforts of our civil engineers and architects towards constructing expansive marketplaces within our cities, and now that they have been completed, what [ROOT.GetCountry.GetRuler.GetSheHe] promised would come to pass has done exactly that; foreign merchants, interested in the potential and capabilities, have moved to our nation, bringing their wealth and connections with them."
+ me_song_ws_16.a: "The more we invest, the more opportunities to invest we shall we have"
 
  me_song_ws_17_title:0 "$song_missions_task_17$"
  me_song_ws_17_desc:0 ""
  me_song_ws_17.a:0 ""
  me_song_ws_17.b:0 ""
  
- me_song_ws_99_title:0 ""
- me_song_ws_99_desc:0 ""
- me_song_ws_99.a:0 ""
+ me_song_ws_99_title: "A Ruinous Reputation"
+ me_song_ws_99_desc: "Unfortunately for the people of [ROOT.GetCountry.GetName], who have already suffered immensely in the recent years, they have been ruled by a series of profligate fools that have wasted the country's precious resources on frivolities - much like the notorious #E King Zhou of Shang#!.\n\nThis state of affairs has caused the reputation of [ROOT.GetCountry.GetRuler.GetName] to suffer, and it will take a great effort to overcome the problems that are before us; we are surrounded by enemies that desire our cities, but the common people are not entirely with us.\n\nMay the gods spare the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] and allow us to survive!"
+ me_song_ws_99.a: "I will shake off this reputation and reclaim my honor"
  
  #Treasure
  song_zhuangzi: "Zhuangzi"
