--- a/localization/english/missions/yan_missions_l_english.yml
+++ b/localization/english/missions/yan_missions_l_english.yml
@@ -152,7 +152,7 @@
  me_yan_19.b: "Give Ke Jing everything he needs for success"
  
  me_yan_1900_title: "$yan_missions_task_19$"
- me_yan_1900_desc: "All of the preparations have been made, and Ke Jing will ride for the court of the Qin ruler in the morning. Ke will pretend to be fleeing from the Yan armies, who will be launching a 'suprise invasion', and will claim to have a map that reveals their troop movements. An exquisite dagger has been poisoned and placed inside of this map scroll, where it will be smuggled into the presence of the Qin and hopefully find its resting place in the King's heart.\n\nAs Ke is gathering the last of his things, he has sent a request to [ROOT.GetCountry.GetRuler.GetName], asking for some bodyguards to accompany him - he appears to be getting a little nervous and wants some experienced muscle at his back."
+ me_yan_1900_desc: "All of the preparations have been made, and Ke Jing will ride for the court of the Qin ruler in the morning. Ke will pretend to be fleeing from the Yan armies, who will be launching a 'surprise invasion', and will claim to have a map that reveals their troop movements. An exquisite dagger has been poisoned and placed inside of this map scroll, where it will be smuggled into the presence of the Qin and hopefully find its resting place in the King's heart.\n\nAs Ke is gathering the last of his things, he has sent a request to [ROOT.GetCountry.GetRuler.GetName], asking for some bodyguards to accompany him - he appears to be getting a little nervous and wants some experienced muscle at his back."
  me_yan_1900.a: "I believe we can spare a little of our expertise"
  me_yan_1900.b: "Everything that you ask for is yours!"
  
