Clue event chain

--- a/localization/english/flav_new_traits_l_english.yml
+++ b/localization/english/flav_new_traits_l_english.yml
@@ -153,13 +153,13 @@
  
  attractive:0 "Attractive"
  attractive_desc:0 "[CHARACTER.GetPraenomen] is extraordinarily attractive. Some have even called [CHARACTER.GetPraenomen] a reflection of the goddess of beauty herself."
- bisexual_bad_tooltip:0 "This option is #Y exclusive#! because your ruler has the #Y Attractive#! trait."
+ attractive_bad_tooltip:0 "This option is #Y exclusive#! because your ruler has the #Y Attractive#! trait."
  
  #######################################################
  #Military Traits
  #######################################################
  mil_indecisive:0 "Indecisive"
- mil_indecisive_desc:0 "[CHARACTER.GetPraenomen] is terribly indecisive, oftentimes not knowing when to push forward or retreat. This makes him quite unpopular among both [CHARACTER.GetHerHis] soldiers as well as the common people."
+ mil_indecisive_desc:0 "[CHARACTER.GetPraenomen] is terribly indecisive, oftentimes not knowing when to push forward or retreat. This makes [CHARACTER.GetHerHim] quite unpopular among both [CHARACTER.GetHerHis] soldiers as well as the common people."
  mil_indecisive_bad_tooltip:0 "This option is #Y exclusive#! because your ruler has the #Y Indecisive#! trait."
  
  
