--- a/localization/english/events/FMO_CFT_event_chains_l_english.yml
+++ b/localization/english/events/FMO_CFT_event_chains_l_english.yml
@@ -131,45 +131,47 @@
 # Oratory - Cluedo Event Chain
 ##############################################################################################################################################################
  
- lifestyle_event_chains.27.t: "TODO"
- lifestyle_event_chains.27.desc: "TODO"
- lifestyle_event_chains.27.a: "TODO"
- lifestyle_event_chains.27.b: "TODO"
+ lifestyle_event_chains.27.t: "An Exquisite Necklace"
+ lifestyle_event_chains.27.desc: "As [ROOT.GetCountry.GetRuler.GetName] strolls through the bustling markets of [ROOT.GetCountry.GetCapital.GetName], a merchant approaches, bearing a luxurious necklace crafted from a strang metal and adorned with exquisite jewels. The craftsmanship is unparalleled, nothing like it has ever been seen in [ROOT.GetCountry.GetCapital.GetName]. The merchant, bowing respectfully, presents the necklace to [ROOT.GetCountry.GetRuler.GetPraenomen] and explains its origins. 'Your [ROOT.GetCountry.GetRuler.GetRulerTitle], I have poured my heart into creating this masterpiece. It is fashioned from the finest materials and adorned with precious jewels from distant lands. Such a regal piece naturally belongs in the hands of a ruler of your stature or perhaps for your spouse?'\n\n[ROOT.GetCountry.GetRuler.spouse.GetName] has been a little testy lately, perhaps this could serve as a symbol of [ROOT.GetCountry.GetRuler.GetPraenomen]'s affection."
+ lifestyle_event_chains.27.a: "[ROOT.GetCountry.GetRuler.spouse.GetName] must have this necklace!"
+ lifestyle_event_chains.27.b: "I'd rather not waste the gold."
  
- lifestyle_event_chains.28.t: "TODO"
- lifestyle_event_chains.28.desc: "TODO"
- lifestyle_event_chains.28.a: "TODO"
- lifestyle_event_chains.28.b: "TODO"
+ lifestyle_event_chains.28.t: "The Stolen Necklace"
+ lifestyle_event_chains.28.desc: "About a month has passed since [ROOT.GetCountry.GetRuler.GetPraenomen] acquired the luxurious necklace for [ROOT.GetCountry.GetRuler.spouse.GetName]. [ROOT.GetCountry.GetRuler.spouse.GetPraenomen] cheriched the gift dearly and is rarely seen without it. However, after [ROOT.GetCountry.GetRuler.GetPraenomen] and [ROOT.GetCountry.GetRuler.spouse.GetPraenomen] returned from a lavish banquet, the unthinkable occurs - the necklace is stolen from [ROOT.GetCountry.GetRuler.spouse.GetName]'s neck by a hooded bandit, leaving a void where once sparkled the symbol of their love. [ROOT.GetCountry.GetRuler.spouse.GetPraenomen] is overcome with grief and anger, screaming bloody vengeance upon the thief and demands an immediate investigation to apprehend the culprit."
+ lifestyle_event_chains.28.a: "Order a thorough investigation!"
+ lifestyle_event_chains.28.b: "We have more pressing matters to attend to.
+
+ lifestyle_event_chains.29.t: "No Clues"
+ lifestyle_event_chains.29.desc: "Despite tireless efforts, the investigation into the stolen necklace has yielded no significant progress. The palace guards, however, remain vigilant and unwavering in their commitment to solving the mystery. [guard_of_ruler.GetName], leading the investigation, approaches [ROOT.GetCountry.GetRuler.GetPraenomen] with a solemn report. 'Your [ROOT.GetCountry.GetRuler.GetRulerTitle], we have scoured every corner, interviewed countless witnesses, and examined every lead available to us. Yet, the identity of the thief remains elusive. Still, we do not despair. Our resolve is unbroken, and we remain hopeful that a breakthrough will occur. The citizens and the guard alike are invested in this quest for justice, and we pledge to continue our efforts until the culprit is brought to justice.'"
+ lifestyle_event_chains.29.a: "Very well."
+
+ lifestyle_event_chains.30.t: "Caught-Redheaded"
+ lifestyle_event_chains.30.desc: "A commotion stirs in the palace as accusations of theft echo through the corridors. A slave, wide-eyed with fear, approaches the [guard_of_ruler.GetName], claiming to have witnessed another slave, apparently called [servant.GetName] stealing coins from [ROOT.GetCountry.GetRuler.spouse.GetPraenomen]'s purse. Rather annoyingly, [guard_of_ruler.GetName] just caught [cooks_wife.GetName], the wife of [ROOT.GetCountry.GetRuler.GetPraenomen]'s personal cook stealing food from the kitchen. [guard_of_ruler.GetName] reasons that one of these two servants must have stolen [ROOT.GetCountry.GetRuler.spouse.GetPraenomen]'s necklace.\n\n The guards swiftly investigate the matter, and both vehemently deny any wrongdoing."
+ lifestyle_event_chains.30.a: "Arrest [ROOT.GetCountry.GetRuler.servant.GetName]."
+ lifestyle_event_chains.30.b: "Arrest [ROOT.GetCountry.GetRuler.cooks_wife.GetName]."
+
+#same as 30
+ lifestyle_event_chains.31.t: "Caught-Redheaded"
+ lifestyle_event_chains.31.desc: "A commotion stirs in the palace as accusations of theft echo through the corridors. A slave, wide-eyed with fear, approaches the [guard_of_ruler.GetName], claiming to have witnessed another slave, apparently called [servant.GetName] stealing coins from [ROOT.GetCountry.GetRuler.spouse.GetPraenomen]'s purse. Rather annoyingly, [guard_of_ruler.GetName] just caught [cooks_wife.GetName], the wife of [ROOT.GetCountry.GetRuler.GetPraenomen]'s personal cook stealing food from the kitchen. [guard_of_ruler.GetName] reasons that one of these two servants must have stolen [ROOT.GetCountry.GetRuler.spouse.GetPraenomen]'s necklace.\n\n The guards swiftly investigate the matter, and both vehemently deny any wrongdoing."
+ lifestyle_event_chains.31.a: "Arrest [ROOT.GetCountry.GetRuler.servant.GetName]."
+ lifestyle_event_chains.31.b: "Arrest [ROOT.GetCountry.GetRuler.cooks_wife.GetName]."
+
  
- lifestyle_event_chains.29.t: "TODO"
- lifestyle_event_chains.29.desc: "TODO"
- lifestyle_event_chains.29.a: "TODO"
+ lifestyle_event_chains.32.t: "Confession in the Wine Cellar"
+ lifestyle_event_chains.32.desc: "After enduring over a month of imprisonment in the dim confines of the palace wine cellar, the slave accused of robbing [ROOT.GetCountry.GetRuler.spouse.GetPraenomen], finally breaks their silence. Appearing weary and desperate, the wretch confesses to stealing the necklace that has haunted the palace with turmoil. The details spill out in a rush as he reveals the location of [ROOT.GetCountry.GetRuler.spouse.GetPraenomen]'s stolen necklace. 'I took it, Your [ROOT.GetCountry.GetRuler.GetRulerTitle],' [ROOT.GetCountry.GetRuler.spouse_slave.GetName] admits, 'I hid it in a small compartment beneath the floorboards of my quarters. Please, spare me further punishment, and let me bring it to you.'"
+ lifestyle_event_chains.32.a: "[ROOT.GetCountry.GetRuler.spouse.GetPraenomen] will be pleased."
+
+ lifestyle_event_chains.33.t: "Wrongful Imprisonment"
+ lifestyle_event_chains.33.desc: "After enduring over a month of imprisonment in the dim confines of the palace wine cellar, the wife of [ROOT.GetCountry.GetRuler.GetPraenomen]'s personal cook accused of robbing [ROOT.GetCountry.GetRuler.spouse.GetPraenomen] still vehemently denies committing any wrong doing. The initial investigation that led to [ROOT.GetCountry.GetRuler.spouse_slave.GetName]'s imprisonment now appears flawed. [guard_of_ruler.GetName], after reviewing the evidence once more, comes to a troubling conclusion: the wrong person was arrested."
+ lifestyle_event_chains.33.a: "Ah, that's rather unfortunate."
  
- lifestyle_event_chains.30.t: "TODO"
- lifestyle_event_chains.30.desc: "TODO"
- lifestyle_event_chains.30.a: "TODO"
- lifestyle_event_chains.30.b: "TODO"
+ lifestyle_event_chains.34.t: "Wrongful Imprisonment"
+ lifestyle_event_chains.34.desc: "After enduring over a month of imprisonment in the dim confines of the palace wine cellar, the slave accused of robbing [ROOT.GetCountry.GetRuler.spouse.GetPraenomen] still vehemently denied committing any wrong doing. The initial investigation that led to [ROOT.GetCountry.GetRuler.spouse_slave.GetName]'s imprisonment now appears flawed. [guard_of_ruler.GetName], after reviewing the evidence once more, comes to a troubling conclusion: the wrong person was arrested."
+ lifestyle_event_chains.34.a: "Ah, that's rather unfortunate."
  
- lifestyle_event_chains.31.t: "TODO"
- lifestyle_event_chains.31.desc: "TODO"
- lifestyle_event_chains.31.a: "TODO"
- lifestyle_event_chains.31.b: "TODO"
- 
- lifestyle_event_chains.32.t: "TODO"
- lifestyle_event_chains.32.desc: "TODO"
- lifestyle_event_chains.32.a: "TODO"
- 
- lifestyle_event_chains.33.t: "TODO"
- lifestyle_event_chains.33.desc: "TODO"
- lifestyle_event_chains.33.a: "TODO"
- 
- lifestyle_event_chains.34.t: "TODO"
- lifestyle_event_chains.34.desc: "TODO"
- lifestyle_event_chains.34.a: "TODO"
- 
- lifestyle_event_chains.35.t: "TODO"
- lifestyle_event_chains.35.desc: "TODO"
- lifestyle_event_chains.35.a: "TODO"
+ lifestyle_event_chains.35.t: "Confession in the Wine Cellar"
+ lifestyle_event_chains.35.desc: "After enduring over a month of imprisonment in the dim confines of the palace wine cellar, the wife of [ROOT.GetCountry.GetRuler.GetPraenomen]'s personal cook accused of robbing [ROOT.GetCountry.GetRuler.spouse.GetPraenomen], finally breaks their silence. Appearing weary and desperate, the wretch confesses to stealing the necklace that has haunted the palace with turmoil. The details spill out in a rush as she reveals the location of [ROOT.GetCountry.GetRuler.spouse.GetPraenomen]'s stolen necklace. 'I took it, Your [ROOT.GetCountry.GetRuler.GetRulerTitle],' [ROOT.GetCountry.GetRuler.spouse_slave.GetName] admits, 'I hid it in a small compartment beneath the floorboards of my quarters. Please, spare me further punishment, and let me bring it to you.'"
+ lifestyle_event_chains.35.a: "[ROOT.GetCountry.GetRuler.spouse.GetPraenomen] will be pleased."
  
 ##############################################################################################################################################################
 # Military - Raiders of the Lost Ark
