--- a/localization/english/missions/missions_jingug_l_english.yml
+++ b/localization/english/missions/missions_jingug_l_english.yml
@@ -32,7 +32,7 @@
  missions_jingug_task_8_DESC: "The fame and glory of [ROOT.GetCountry.GetRuler.GetName] will be immortalized if [ROOT.GetCountry.GetRuler.GetSheHe] is able to drive the barbarians out of northern #E Jin#! - the only power on our peninsula must be [ROOT.GetCountry.GetName].\n\n\n\n\n\n\n\n\n\n@east_steppemil1!"
 
  missions_jingug_task_9: "Tribal Center of Jinhan"
- missions_jingug_task_9_DESC: "The province of #E Jinhan#! has been home to a distinct culture of lesser tribal kingdoms that have long evaded direct control in our confederacy. Their lands lay inland in the rugged terrain between the eastern and our homeland, with rogue tribal chiefs periodically raiding trade caravans bringing goods from eastern ports to our cpaital. We must directly control these lands to ensure the safety of our caravans and civilize our tribal kinsmen.\n\n\n\n\n\n\n\n\n\n@east_steppemil3!"
+ missions_jingug_task_9_DESC: "The province of #E Jinhan#! has been home to a distinct culture of lesser tribal kingdoms that have long evaded direct control in our confederacy. Their lands lay inland in the rugged terrain between the eastern and our homeland, with rogue tribal chiefs periodically raiding trade caravans bringing goods from eastern ports to our capital. We must directly control these lands to ensure the safety of our caravans and civilize our tribal kinsmen.\n\n\n\n\n\n\n\n\n\n@east_steppemil3!"
 
  missions_jingug_task_10: "Claim the Islands"
  missions_jingug_task_10_DESC: "As we gather more reconnaissance about what lies to our east, [ROOT.GetCountry.GetRuler.GetName] is beginning to prepare our troops for further island invasions.\n\n\n\n\n\n\n\n\n\n@tibet_mil6!"
