some xiongnu loc

--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -2,70 +2,70 @@
 
  xiongnu_missions_01: "Rise of Chanyu"
  xiongnu_missions_01_DESCRIPTION: "Mission description"
- xiongnu_missions_01_CRITERIA_DESCRIPTION: "This mission will be completed when"
+ xiongnu_missions_01_CRITERIA_DESCRIPTION: "This mission will be completed when we have dominated the less tribes near our lands and Modun becomes the Chanyu to lead our horde."
  xiongnu_missions_01_BUTTON_TOOLTIP: ""
 
 #Missions
 
  xiongnu_missions_01_task_1: "Consolidate our Clans"
- xiongnu_missions_01_task_1_DESC: ""
+ xiongnu_missions_01_task_1_DESC: "The leadership of the Xiongnu tribes is fractured and disorganized. If we over hope to compete with our neighbors we must consolidate the political leadership of the disparate Xiongnu tribes under the banner of one powerful dynasty."
 
  xiongnu_missions_01_task_2: "Loyalty to Luandi"
- xiongnu_missions_01_task_2_DESC: ""
+ xiongnu_missions_01_task_2_DESC: "The blood of the Luandi family has been chosen to lead our tribal confederation to glory over our neighbors, with the promise of the spoils of war. Long live the Luandi line!"
 
  xiongnu_missions_01_task_3: "Touman's Tribe"
- xiongnu_missions_01_task_3_DESC: ""
+ xiongnu_missions_01_task_3_DESC: "Touman Luandi has shown great promise as both a warrior and strong political leader. He commands the respect of the various tribesmen of our realm, and is the best fit to lead the next generation of Xiongnu conquest and reform."
 
  xiongnu_missions_01_task_4: "Annex Anhou"
- xiongnu_missions_01_task_4_DESC: ""
+ xiongnu_missions_01_task_4_DESC: "The brethren, Anhou tribes, have long vexed the Xiongnu by raiding our pasturelands and capturing our horses. It is time to unite them through conquest and bring the raids to an end."
 
  xiongnu_missions_01_task_5: "Dominate Dingling"
- xiongnu_missions_01_task_5_DESC: ""
+ xiongnu_missions_01_task_5_DESC: "The fabled Dingling tribes are a northern nuisance, steadfastly independent and more adept to the harsh winters of Lake Baikal. We must bring them under our banner by force to control the resources of that great lake and secure our northern borders from any raids and aggression."
 
  xiongnu_missions_01_task_6: "Western Warmongering"
- xiongnu_missions_01_task_6_DESC: ""
+ xiongnu_missions_01_task_6_DESC: "It is time to strike out westward to dominate the various clans that have long held political sway over our lands. The vast wealth of the kurgans built by our western brothers shall be ours!"
 
  xiongnu_missions_01_task_7: "Hoarding Horses"
- xiongnu_missions_01_task_7_DESC: ""
+ xiongnu_missions_01_task_7_DESC: "What are we without horses? We must breed more and better horses if we ever hope to continue to dominate the steppe."
 
- xiongnu_missions_01_task_8: "Steppe Stirrups"
- xiongnu_missions_01_task_8_DESC: ""
+ xiongnu_missions_01_task_8: "Early Steppe Stirrups"
+ xiongnu_missions_01_task_8_DESC: "While the origin of proto-stirrups have long been debated, it is without a doubt that Xiongnu hard-wood saddles contributed to the development and proliferation of technological developments that led to the stirrup we know today. Let us invest in the this equestrine technology, and all will fear the sound of our hooves."
 
  xiongnu_missions_01_task_9: "Prairies and Pastures"
- xiongnu_missions_01_task_9_DESC: ""
+ xiongnu_missions_01_task_9_DESC: "Raising livestock in the grasslands and pastures of the steppe is the backbone of our political and economic system. This cannot be ignored by the Xiongnu political leadership."
 
  xiongnu_missions_01_task_10: "Foreign Tribute"
- xiongnu_missions_01_task_10_DESC: ""
+ xiongnu_missions_01_task_10_DESC: "The eastern Hu tribes are a nuisance to our flank and are political fractured. We should strike while we have the advantage to ensure they pay tribute rather than raid our pastures."
 
  xiongnu_missions_01_task_11: "Capital Breeding Grounds"
- xiongnu_missions_01_task_11_DESC: ""
+ xiongnu_missions_01_task_11_DESC: "Our growing seat of power at Longcheng is becoming an ever-important nexus of trade, as we have the best horses and pasturelands north of the Gobi. We should invest in the maintenance of dedicated breeding grounds in and around our capital to spur economic activity and maintain our grip on the horse and livestock trade."
 
  xiongnu_missions_01_task_12: "Southern Insults"
- xiongnu_missions_01_task_12_DESC: ""
+ xiongnu_missions_01_task_12_DESC: "Our arch-rival, the Yuezhi, have long been the greatest threat to our growing might. Never again shall we live under the yolk of the southern horselords. The time has come to instigate hostilities with the Yuezhi, now that our our confederation can stand toe-to-toe with them."
 
  xiongnu_missions_01_task_13: "Chanyu's Children"
- xiongnu_missions_01_task_13_DESC: ""
+ xiongnu_missions_01_task_13_DESC: "As Touman grows older, we must begin to think about the next generation of Xiongnu leadership. The young Modun, born of one of Chanyu Touman's concubines, is strongly disfavored by the wife of the Chanyu. She will do wathever possible to secure the position of Chanyu for her own children at the expense of Modun."
 
  xiongnu_missions_01_task_14: "The Mighty Modun"
- xiongnu_missions_01_task_14_DESC: ""
+ xiongnu_missions_01_task_14_DESC: "Despite gaining the ire of the Chanyu's wife, Modun, the son of one of Touman's concubines, is proving his worth as a fierce steppe warrior. His charisma is magnetic to the tribal elite, disrupting the plans of the Chanyu to secure the positions of his children born of his true wife. Perhaps he can be placated with some role within our tribal governance structure while a plan is hatched..."
 
  xiongnu_missions_01_task_15: "Hollow Out Hujie"
- xiongnu_missions_01_task_15_DESC: ""
+ xiongnu_missions_01_task_15_DESC: "The Hujie tribes sit at the doorstep of the vast western steppe lands, and have amassed considerable wealth at their kurgans over the centuries. The time has come to bring their tribes into the Xiongnu political order and seize their wealth for our own."
 
  xiongnu_missions_01_task_16: "Jumping Jiankun"
- xiongnu_missions_01_task_16_DESC: ""
+ xiongnu_missions_01_task_16_DESC: "The Samoyed speaking Jiankun peoples have long been trade and cultural partners in the greater Scytho-Siberian world. It is time we claim their vast wealth for ourselves and fold them into our confederation."
 
  xiongnu_missions_01_task_17: "Control Gobi"
- xiongnu_missions_01_task_17_DESC: ""
+ xiongnu_missions_01_task_17_DESC: "The Gobi desert is both a vast wasteland and a highway to the riches of the Yellow River. Controlling the routes through the Gobi will allow for our raiding parties to reach further south and raid the rich lands of the Middle Kingdom."
 
  xiongnu_missions_01_task_18: "Ordos Expedition"
- xiongnu_missions_01_task_18_DESC: ""
+ xiongnu_missions_01_task_18_DESC: "The most obvious first target across the Gobi is the Ordos Loop, a region of grasslands well-suited for nomadic herding and livestock breeding. Controlling this vast plain brings us to the doorstep of Chinese cities and brings vast new wealth to our steppe economy."
 
  xiongnu_missions_01_task_19: "Warn Wusun"
- xiongnu_missions_01_task_19_DESC: ""
+ xiongnu_missions_01_task_19_DESC: "The piddling Wusun tribe, a lesser cousin of our Yuezhi rivals, cannot be allowed to interfere in our relations with the other steppe tribes. Let us ensure they won't, through 'diplomatic' means."
 
  xiongnu_missions_01_task_20: "Rise of the New Chanyu"
- xiongnu_missions_01_task_20_DESC: ""
+ xiongnu_missions_01_task_20_DESC: "A new Chanyu will rise to create a legacy of conquer and terror that will echo through the millenia..."
 
 
  #Events 
