--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -2,7 +2,7 @@
 
  xiongnu_missions_01: "Rise of Chanyu"
  xiongnu_missions_01_DESCRIPTION: "Mission description"
- xiongnu_missions_01_CRITERIA_DESCRIPTION: "This mission will be completed when we have dominated the less tribes near our lands and Modun becomes the Chanyu to lead our horde."
+ xiongnu_missions_01_CRITERIA_DESCRIPTION: "This mission will be completed when we have dominated the lesser tribes near our lands and Modun becomes the Chanyu to lead our horde."
  xiongnu_missions_01_BUTTON_TOOLTIP: ""
 
 #Missions
@@ -65,7 +65,7 @@
  xiongnu_missions_01_task_19_DESC: "The piddling Wusun tribe, a lesser cousin of our Yuezhi rivals, cannot be allowed to interfere in our relations with the other steppe tribes. Let us ensure they won't, through 'diplomatic' means."
 
  xiongnu_missions_01_task_20: "Rise of the New Chanyu"
- xiongnu_missions_01_task_20_DESC: "A new Chanyu will rise to create a legacy of conquer and terror that will echo through the millenia..."
+ xiongnu_missions_01_task_20_DESC: "A new Chanyu will rise to create a legacy of conquest and terror that will echo through the millenia..."
 
 
  #Events 
