--- a/localization/english/missions/wei_missions_l_english.yml
+++ b/localization/english/missions/wei_missions_l_english.yml
@@ -7,62 +7,62 @@
 
  #Missions
 
- wei_missions_task_1:0 "Longyang and the Fish"
- wei_missions_task_1_DESC:0 ""
+ wei_missions_task_1: "Longyang and the Fish"
+ wei_missions_task_1_DESC: "While [ROOT.GetCountry.GetRuler.GetName] was out fishing with his companion #E Jun Longyang#!, his partner and lover burst into tears after pulling in an enormous catch. \n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
- wei_missions_task_2:0 "Check Chu"
- wei_missions_task_2_DESC:0 ""
+ wei_missions_task_2: "Check Chu"
+ wei_missions_task_2_DESC: "Many years ago, the armies of [GetCountry('CHU').GetName] dominated the battlefield - truly an opponent that one did not grapple with lightly. However, many years of mismanagement has crippled the southern nation, and corruption is a way of life for our neighbors. Now that [ROOT.GetCountry.GetName] is becoming a force to be reckoned with, the time has come to check Chu. \n\n\n\n\n\n\n\n\n\n@china_mil5!"
 
- wei_missions_task_3:0 "Access Northern Lands"
- wei_missions_task_3_DESC:0 ""
+ wei_missions_task_3: "Access Northern Lands"
+ wei_missions_task_3_DESC: "The people of [GetCountry('HAN').GetName] have suffered like ours have in the wake of the #E Partition of Jin#! - it is bitter medicine to swallow, watching your former influence and strength dissipating like the morning fog. It has been suggested in [ROOT.GetCountry.GetCapital.GetName] that if we have access to Han, we could potentially persuade them to join with us. \n\n\n\n\n\n\n\n\n\n@china_mil12!"
 
- wei_missions_task_4:0 "Recover from Maling"
- wei_missions_task_4_DESC:0 ""
+ wei_missions_task_4: "Recover from Maling"
+ wei_missions_task_4_DESC: "Although the ruinous effects of the aftermath of the #Y Battle of Maling#! has considerably dampened the spirits of our fighting men, [ROOT.GetCountry.GetRuler.GetName] has successfully managed to overcome the effects of this dark episode from our history. \n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
- wei_missions_task_5:0 "Deal with Weii"
- wei_missions_task_5_DESC:0 ""
+ wei_missions_task_5: "Deal with Weii"
+ wei_missions_task_5_DESC: "The fact that [GetProvince('(int32)8435').GetName] is not ruled by [ROOT.GetCountry.GetRuler.GetName] remains a great mystery, prompting our indomitable [ROOT.GetCountry.GetRulerTitle] to make official battle plans for dealing with [GetCountry('WII').GetName]. \n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
- wei_missions_task_6:0 "Snatch Song"
- wei_missions_task_6_DESC:0 ""
+ wei_missions_task_6: "Snatch Song"
+ wei_missions_task_6_DESC: "The neighboring kingdom of [GetCountry('SNG').GetName] is showing signs of gathering its strength, and, if left unchecked, could potentially become a powerful rival in the region. The time has come, [ROOT.GetCountry.GetRuler.GetName] argues, to snatch Song by the roots and pluck them from the ground. \n\n\n\n\n\n\n\n\n\n@china_mil10!"
 
- wei_missions_task_7:0 "Reclaim Western Wei"
- wei_missions_task_7_DESC:0 ""
+ wei_missions_task_7: "Reclaim Western Wei"
+ wei_missions_task_7_DESC: "Although the wars over our western claims promise to be bloody, nothing will deter [ROOT.GetCountry.GetRuler.GetName] from piecing back together the domains that were stolen from our ancestors. Prepare the levies of Wei for war! \n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
- wei_missions_task_8:0 "'Help' Han"
- wei_missions_task_8_DESC:0 ""
+ wei_missions_task_8: "'Help' Han"
+ wei_missions_task_8_DESC: "As the people of [GetCountry('HAN').GetName] have grown closer to our own kinsmen, [ROOT.GetCountry.GetRuler.GetName] has insisted on doing everything [ROOT.GetCountry.GetRuler.GetSheHe] can to 'help' bring our nations together. \n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
- wei_missions_task_9:0 "Fortify our Capitals"
- wei_missions_task_9_DESC:0 ""
+ wei_missions_task_9: "Fortify Our Capitals"
+ wei_missions_task_9_DESC: "Any of our two traditional capitals, respectively [GetProvince('(int32)8344').GetName] and [GetProvince('(int32)8446').GetName], would be rich prizes for any of our enemies to snatch - a situation that [ROOT.GetCountry.GetRuler.GetName] has vowed to never let happen. The time has come to bolster the walls of our cities!\n\n\n\n\n\n\n\n\n\n@china_mil14!"
 
- wei_missions_task_10:0 "Northern Allies"
- wei_missions_task_10_DESC:0 ""
+ wei_missions_task_10: "Northern Allies"
+ wei_missions_task_10_DESC: "While some living within [ROOT.GetCountry.GetCapital.GetName] claim that the north is the dominion of barbarians and horselords, [ROOT.GetCountry.GetRuler.GetName] believes that [ROOT.GetCountry.GetName] might be able to secure valuable allies in the region. \n\n\n\n\n\n\n\n\n\n@china_mil1!"
 
- wei_missions_task_11:0 "Shove Away Qi"
- wei_missions_task_11_DESC:0 ""
+ wei_missions_task_11: "Shove Away Qi"
+ wei_missions_task_11_DESC: "[GetCountry('QII').GetName] has become a nuisance lately, and as they attempt to expand their regional control, they can fully expect to meet the armies of Wei blocking their way - we must shove these fools to the ground, forcing them to bow before the might of [ROOT.GetCountry.GetRuler.GetName]! \n\n\n\n\n\n\n\n\n\n@east_steppemil5!"
 
- wei_missions_task_12:0 "Destroy Qin"
- wei_missions_task_12_DESC:0 ""
+ wei_missions_task_12: "Destroy Qin"
+ wei_missions_task_12_DESC: "At long last, [ROOT.GetCountry.GetRuler.GetName] feels that our forces are prepared to clash with those of [GetCountry('QIN').GetName]. The rampaging armies of [GetCountry('QIN').GetRuler.GetName] seek to conquer those around them, but they have inadvertently unleashed their own destruction! \n\n\n\n\n\n\n\n\n\n@east_steppemil10!"
 
- wei_missions_task_13:0 "Push North"
- wei_missions_task_13_DESC:0 ""
+ wei_missions_task_13: "Push North"
+ wei_missions_task_13_DESC: "The cowardly armies of the enemy melt before our forces, throwing down their weapons in their haste to escape the battlefield. Onward, soldiers of Wei! The time has come to push farther north! \n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
- wei_missions_task_14:0 "Daliang and Anyi"
- wei_missions_task_14_DESC:0 ""
+ wei_missions_task_14: "Daliang and Anyi"
+ wei_missions_task_14_DESC: "[ROOT.GetCountry.GetRuler.GetName] has decided to beautify the cities of [GetProvince('(int32)8344').GetName] and [GetProvince('(int32)8446').GetName] with a grand construction initiative, one that promises to bring contentment to our people and increase the allure of our two capitals. [GetProvince('(int32)8446').GetName] shall be the focus of these efforts, but that does not mean that [GetProvince('(int32)8344').GetName] will not receive its own rewards.\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
- wei_missions_task_15:0 "The Three Jins"
- wei_missions_task_15_DESC:0 ""
+ wei_missions_task_15: "The Three Jins"
+ wei_missions_task_15_DESC: "News is traveling all throughout the Middle Kingdom, moving faster than a lightning bolt and causing just as much of a shock to those that hear the word; #T Jin#! has been restored by [ROOT.GetCountry.GetName]! The debts of the past have been repaid by the iron hand of [ROOT.GetCountry.GetRuler.GetName]. \n\n\n\n\n\n\n\n\n\n@tibet_mil2!"
 
- wei_missions_task_16:0 "King Hui's Extravagance"
- wei_missions_task_16_DESC:0 ""
+ wei_missions_task_16: "King Hui's Extravagance"
+ wei_missions_task_16_DESC: "What use is silver and gold locked away in a coffer, guarded by strongmen? We must open the treasuries and spend on the things that matter in life; music, poetry and art! \n\n\n\n\n\n\n\n\n\n@tibet_mil9!"
 
- wei_missions_task_17:0 "Wei Dynasty"
- wei_missions_DESC:0 ""
+ wei_missions_task_17: "Wei Dynasty"
+ wei_missions_task_17_DESC: "The moment of our triumph is finally at hand - we have destroyed all that could challenge our might, and a new #E Chinese Empire#! reigns unopposed! All hail the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective]! \n\n\n\n\n\n\n\n\n\n@china_mil15!"
  
- wei_missions_task_18:0 "Bamboo Annals"
- wei_missions_task_18_DESC:0 ""
+ wei_missions_task_18: "Bamboo Annals"
+ wei_missions_task_18_DESC: "[ROOT.GetCountry.GetRuler.GetName] has commissioned a grand history of the Middle Kingdom, one that will span from the reign of the glorious #T Yellow Emperor#! up to the reign of our very own [ROOT.GetCountry.GetRulerTitle]. \n\n\n\n\n\n\n\n\n\n@tibet_mil1!"
  
- wei_missions_task_19:0 "Yellow River Ports"
- wei_missions_task_19_DESC:0 ""
+ wei_missions_task_19: "Yellow River Ports"
+ wei_missions_task_19_DESC: "Not only must we conquer the lands of our rivals, but, once encharged with taking care of the cities and settlements that fall into our hands, we must build up the local infrastructure. For what use is possessing a great land unless we do things to improve the lives of the people? We should built harbors up and down the Yellow River, for there is untold wealth to find alongside its riverbanks. \n\n\n\n\n\n\n\n\n\n@india_mil1!"
 
 
  #Events 
@@ -173,41 +173,41 @@
 
  #Treasure
  wei_bamboo_annals: "Bamboo Annals"
- wei_bamboo_annals_desc: ""
+ wei_bamboo_annals_desc: "An impressive history that covers a wide period within the Middle Kingdom, the Bamboo Annals were commissioned by the Lords of Wei."
  
  #Modifiers
- longyang_fish_mod: "TODO"
- legacy_of_maling: "TODO"
- unified_weiis: "TODO"
- wei_northern_allies: "TODO"
- wei_capital_daliang: "TODO"
- wei_northern_conquest: "TODO"
- destroyed_qin_as_wei: "TODO"
- wei_unified_jin: "TODO"
- wei_defensive_mod: "TODO"
- wei_final_mod: "TODO"
- wei_yellow_river_eco: "TODO"
- desc_longyang_fish_mod: "TODO"
- desc_legacy_of_maling: "TODO"
- desc_unified_weiis: "TODO"
- desc_wei_northern_allies: "TODO"
- desc_wei_capital_daliang: "TODO"
- desc_wei_northern_conquest: "TODO"
- desc_destroyed_qin_as_wei: "TODO"
- desc_wei_unified_jin: "TODO"
- desc_wei_defensive_mod: "TODO"
- desc_wei_final_mod: "TODO"
- desc_wei_yellow_river_eco: "TODO"
+ longyang_fish_mod: "The Lover's Promise"
+ legacy_of_maling: "Shameful Legacy of the Battle of Maling"
+ unified_weiis: "Submission of Weii"
+ wei_northern_allies: "Northern Allies"
+ wei_capital_daliang: "A Beautiful City"
+ wei_northern_conquest: "Northern Conscriptions"
+ destroyed_qin_as_wei: "Destruction of Qin"
+ wei_unified_jin: "Restorers of Jin"
+ wei_defensive_mod: "Strong Walls of Wei"
+ wei_final_mod: "Wei Dynasty"
+ wei_yellow_river_eco: "Booming Trade Along the Yellow River"
+ desc_longyang_fish_mod: "The Lord of Wei vowed to his lover that he remain faithful to him, even unto death."
+ desc_legacy_of_maling: "The armies of Wei were thoroughly defeated during the Battle of Maling, leading to a precipitous drop in our prestige and power."
+ desc_unified_weiis: "The superior might of Wei has forced the petty king of Weii to submit to their authority."
+ desc_wei_northern_allies: "The Lords of Wei have entered into agreements with northern kingdoms in order to bolster their own standing."
+ desc_wei_capital_daliang: "Daliang, after its period of construction and renovation, is truly one of the most beautiful cities within all of the Middle Kingdom."
+ desc_wei_northern_conquest: "The Lord of Wei has commanded that fighting men be recruited in the northern provinces that were recently conquered."
+ desc_destroyed_qin_as_wei: "Qin has been brought to heel by the armies of Wei, who have shattered their might into pieces."
+ desc_wei_unified_jin: "The Lords of Wei have done the impossible; restored Jin after it was sundered long ago."
+ desc_wei_defensive_mod: "The capital cities of the Wei have seen their walls lengthened, with extra watchtowers placed along the perimeters of the city."
+ desc_wei_final_mod: "Wei has smashed all that would stand against her, and the ruling Dynasty has all but claimed the Mandate of Heaven."
+ desc_wei_yellow_river_eco: "Thanks to the many ports built alongside the Yellow River by the Rulers of Wei, the economy of this region has grown magnificently."
  
  #Tooltips
- wei_missions_task_2_claims_tt: "TODO"
+ wei_missions_task_2_claims_tt: "We will receive claims on the #Y Daliang#!, #Y Jiyin#!, #Y Shanyang#!, #Y Huaiyang#!, #Y Pei#! and #Y Peng#! areas."
  wei_missions_task_3_offer_han_feudatory: "We will offer Han to become our feudatory."
- wei_missions_task_3_claims_tt: "TODO"
- wei_missions_task_6_claims_tt: "TODO"
- wei_missions_task_7_claims_tt: "TODO"
+ wei_missions_task_3_claims_tt: "We will receive claims on the #Y Hongnong#!, #Y Yueyang#!, #Y Xihe#! and #Y Shang#! areas."
+ wei_missions_task_6_claims_tt: "We will receive claims on the #Y Dong#!, #Y Wei#! and #Y Taishan#! areas."
+ wei_missions_task_7_claims_tt: "We will receive claims on the #Y Xianyang#!, #Y Yueyang#!, #Y Changan#!, #Y Tianshui#! and #Y Wudu#! areas."
  wei_missions_task_10_any_ally_in_you_region: "We have an ally from the Region of You."
- wei_missions_task_10_claims_tt: "TODO"
- wei_missions_task_11_claims_tt: "TODO"
+ wei_missions_task_10_claims_tt: "We will receive claims on the #Y Handan#!, #Y Taiyuan#!, #Y Shangdang#! and #Y Henei#! areas."
+ wei_missions_task_11_claims_tt: "We will receive claims on every province owned by #Y Qin#!."
  wei_missions_task_13_every_bing_and_ji_province_gets: "Every province in the regions of Bing and Ji will get:"
  wei_missions_task_16_scholars_philosophers_might_join: "Scholars and philosphers might join our court."
- wei_missions_task_19_three_yellow_river_ports: "We own at least three ports along the upper Yellow River."
+ wei_missions_task_19_three_yellow_river_ports: "We own at least three ports along the upper #T Yellow River#!."
