zhou loc initial

--- a/localization/english/missions/zhou_missions_l_english.yml
+++ b/localization/english/missions/zhou_missions_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
 
  zhou_missions:0 "Sons of Heaven"
- zhou_missions_DESCRIPTION:0 "Mission description"
- zhou_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when"
- zhou_missions_BUTTON_TOOLTIP:0 ""
+ zhou_missions_DESCRIPTION:0 "The Imperial might of the #E Zhou#! has yet to be extinguished... but it certainly has become a shadow of its former self. The #E Zhou#! rose all the way back in the #T Age of Bronze#!, and continues to this day. However, the governance of the empire has become naught but guarantees of our independence. The truth is, no one truly respects us as a real empire anymore. They pay lipservice, if even that!\n\nThe #E Zhou#! must rise back to prominence, reclaim their Imperial might, and restore the honor and glory of the #E Zhou Dynasty!#!"
+ zhou_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the #E Zhou#! return to their former status."
+ zhou_missions_BUTTON_TOOLTIP:0 "Rise, sons of Heaven!"
 
  #Missions
 
@@ -268,8 +268,8 @@
  me_zhou_21_desc:0 ""
  me_zhou_21.a:0 ""
  
- me_zhou_90_title:0 ""
- me_zhou_90_desc:0 ""
+ me_zhou_90_title:0 "Sons of Heaven"
+ me_zhou_90_desc:0 "The his"
  me_zhou_90.a:0 ""
 
  #Tooltips
