more xiongnu loc

--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -35,7 +35,7 @@
  xiongnu_missions_01_task_9_DESC: "Raising livestock in the grasslands and pastures of the steppe is the backbone of our political and economic system. This cannot be ignored by the Xiongnu political leadership."
 
  xiongnu_missions_01_task_10: "Foreign Tribute"
- xiongnu_missions_01_task_10_DESC: "The eastern Hu tribes are a nuisance to our flank and are political fractured. We should strike while we have the advantage to ensure they pay tribute rather than raid our pastures."
+ xiongnu_missions_01_task_10_DESC: "We need to exact tribute from some of the lesser tribes to fuel our conquests across the steppe - before integrating their lands into our realm directly."
 
  xiongnu_missions_01_task_11: "Capital Breeding Grounds"
  xiongnu_missions_01_task_11_DESC: "Our growing seat of power at Longcheng is becoming an ever-important nexus of trade, as we have the best horses and pasturelands north of the Gobi. We should invest in the maintenance of dedicated breeding grounds in and around our capital to spur economic activity and maintain our grip on the horse and livestock trade."
