--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -2,52 +2,52 @@
 
  xiongnu_missions_2: "Expansion of the Xiongnu"
  xiongnu_missions_2_DESCRIPTION: "Mission description"
- xiongnu_missions_2_CRITERIA_DESCRIPTION: "This mission will be completed when"
+ xiongnu_missions_2_CRITERIA_DESCRIPTION: "This mission will be completed when the Xiongnu have struck out in all directions to create a vast steppe empire."
  xiongnu_missions_2_BUTTON_TOOLTIP: ""
 
 #Missions
 
  xiongnu_missions_2_task_1: "Subjugate Yuezhi"
- xiongnu_missions_2_task_1_DESC: ""
+ xiongnu_missions_2_task_1_DESC: "The bane of our existence for centuries - the Yuezhi - must pay for their treachery against the great Chanyu Modun. The time has come, and our hooves are ready, to finally put an end to our greatest rival in the region. The Yuezhi shall be exterminated."
 
  xiongnu_missions_2_task_2: "Luandi Dynasty"
  xiongnu_missions_2_task_2_DESC: ""
 
  xiongnu_missions_2_task_3: "The Gryphons' Gold"
- xiongnu_missions_2_task_3_DESC: ""
+ xiongnu_missions_2_task_3_DESC: "The great mountains on our western border are said to be inhabited by gold-guarding gryphons - in reality they are but another tribal people who hoard the vast welath of the Altai Mountains for themselves. We will show them to be mere mortal men as they submit to the iron and hoof of the Chanyu."
 
  xiongnu_missions_2_task_4: "Eastern Nomads"
- xiongnu_missions_2_task_4_DESC: ""
+ xiongnu_missions_2_task_4_DESC: "The Hu nomads to our east continue to challenge the integrity of our eastern borders, and compete for pasturelands east of the Gobi and Lake Baikal. While they have served as a buffer between our confederation and that of the Donghu, we can no longer afford their antics on our borders."
 
  xiongnu_missions_2_task_5: "Secure Shanma"
- xiongnu_missions_2_task_5_DESC: ""
+ xiongnu_missions_2_task_5_DESC: "The crushing defeat of the Yuezhi have left us as the dominant force in the Hexi cooridor, but that does not mean the vast trade wealth of the region is totally in our hands. We must fully secure the cooridor and the burgeoning Silk Road trade between China and the Tocharians of the Tarim Basin."
 
  xiongnu_missions_2_task_6: "Laoshang"
- xiongnu_missions_2_task_6_DESC: ""
+ xiongnu_missions_2_task_6_DESC: "The politics of the steppe necessitate continuous demonstration of power against those who would challenge the rule of the Chanyu, lest our rule be delegitimized. Upstart tribal elites may find it tempting to vye for the position of Chanyu, until we put them in their place."
 
  xiongnu_missions_2_task_7: "Lake Balkash"
- xiongnu_missions_2_task_7_DESC: ""
+ xiongnu_missions_2_task_7_DESC: "Just past the Altai to our west lay the great Lake Balkash, around which some of the best pastures and grasslands of the steppe lay waiting for us. Lesser horselords have long squabbled over the region, and it well out of reach of the great southern empires. The time has come to integrate the region into our ever-growing empire."
 
  xiongnu_missions_2_task_8: "A Golden Horse"
- xiongnu_missions_2_task_8_DESC: ""
+ xiongnu_missions_2_task_8_DESC: "Our numerous conquests have brought gold resources under our control. Let us exploit the new mines and fashion a great golden horse to glorify the Chanyu."
 
  xiongnu_missions_2_task_9: "Doom Donghu"
- xiongnu_missions_2_task_9_DESC: ""
+ xiongnu_missions_2_task_9_DESC: "The Donghu have long been our greatest eastern threat - a rival horselord confederation dominated by Mongolic peoples. We must shatter their leadership and integrate the capable warriors of the Hu into our growing steppe empire."
 
  xiongnu_missions_2_task_10: "War on China"
- xiongnu_missions_2_task_10_DESC: ""
+ xiongnu_missions_2_task_10_DESC: "Our steppe rivals have been pacified, our resources are overflowing from conquest, and horses have been bred for war. We are finally in a position to show the Middle Kingdom what true terror is."
 
  xiongnu_missions_2_task_11: "Gold Crown for a Chanyu"
- xiongnu_missions_2_task_11_DESC: ""
+ xiongnu_missions_2_task_11_DESC: "Our conquests and contact with the Chinese have led to appreciation for finer prestige items at the court of the Chanyu. Let us hire foreign artisans to craft a golden crown to inspire awe and majesty for the numerous subjects of the Chanyu."
 
  xiongnu_missions_2_task_12: "Central Sanctuary"
  xiongnu_missions_2_task_12_DESC: ""
 
  xiongnu_missions_2_task_13: "Enter the Desert"
- xiongnu_missions_2_task_13_DESC: ""
+ xiongnu_missions_2_task_13_DESC: "It is not enough to control the Hexi cooridor trade, as the statelets and tribesmen around the Taklamakan continue to realize profits that could be ours. Let us gallop into the first of the areas of the desert oases to exact our tribute."
 
  xiongnu_missions_2_task_14: "Yeet Yan"
- xiongnu_missions_2_task_14_DESC: ""
+ xiongnu_missions_2_task_14_DESC: " The Yan are the northern-most of the Chinese Warring States, and have been attempting to blend our steppe tactics with Chinese conventional power. We must not allow them to gain the upper hand on our horsemen. Plundering the great city of Ji will be the reward of our horsemen, with the finest women and goods to be claimed by the Chanyu."
 
  xiongnu_missions_2_task_15: "The Eastern Coast"
  xiongnu_missions_2_task_15_DESC: ""
