--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -47,7 +47,7 @@
  xiongnu_missions_2_task_13_DESC: "It is not enough to control the Hexi cooridor trade, as the statelets and tribesmen around the Taklamakan continue to realize profits that could be ours. Let us gallop into the first of the areas of the desert oases to exact our tribute."
 
  xiongnu_missions_2_task_14: "Yeet Yan"
- xiongnu_missions_2_task_14_DESC: " The Yan are the northern-most of the Chinese Warring States, and have been attempting to blend our steppe tactics with Chinese conventional power. We must not allow them to gain the upper hand on our horsemen. Plundering the great city of Ji will be the reward of our horsemen, with the finest women and goods to be claimed by the Chanyu."
+ xiongnu_missions_2_task_14_DESC: " The Yan are the northern-most of the Chinese Warring States, and have been attempting to blend our steppe tactics with Chinese conventional power. We must not allow them to gain the upper hand on our horsemen. Plundering the great city of Ji will be ample incentive for our tribesmen, with the finest women and goods to be claimed by the Chanyu."
 
  xiongnu_missions_2_task_15: "The Eastern Coast"
  xiongnu_missions_2_task_15_DESC: ""
